euphony-dsp/src/snapshots/euphony_dsp__filter__Morph.snap
---
source: euphony-dsp/src/filter.rs
assertion_line: 173
expression: node
---
Node {
    name: "Morph",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 306,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "center",
            id: 1,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "q",
            id: 2,
            trigger: false,
            default: 0.1,
        },
        Input {
            name: "morph",
            id: 3,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Morphing filter that morphs between lowpass, peak and highpass modes.\n",
}
