euphony-dsp/src/snapshots/euphony_dsp__filter__Peak.snap
---
source: euphony-dsp/src/filter.rs
expression: node
---
Node {
    name: "Peak",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 312,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "center",
            id: 1,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "q",
            id: 2,
            trigger: false,
            default: 0.1,
        },
    ],
    buffers: [],
    docs: " Peak filter.\n",
    fork: None,
}
