euphony-dsp/src/snapshots/euphony_dsp__filter__Resonator.snap
---
source: euphony-dsp/src/filter.rs
expression: node
---
Node {
    name: "Resonator",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 304,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "cutoff",
            id: 1,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "bandwidth",
            id: 2,
            trigger: false,
            default: 110.0,
        },
    ],
    buffers: [],
    docs: " Constant-gain bandpass resonator.\n",
    fork: None,
}
